--- a/restaurant_menu/templates/index.html
+++ b/restaurant_menu/templates/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Restaurant Menu</h1> 
-    <h3>{{ meals }}</h3> 
+    {% for meal in meals %}
+    <h3>{{ meal.1 }}</h3> 
+    {% endfor %}
 </body>
 </html>
