--- a/restaurant_menu/templates/index.html
+++ b/restaurant_menu/templates/index.html
@@ -8,11 +8,13 @@
 <body>
     <h1>Restaurant Menu</h1> 
     {% for meal in meals %}
-    <h3>{{ meal.1 }}</h3> 
-    {% for m in item_list %}
-        {{ m.meal }}
-        {{ m.description}}
-    {% endfor %}
+        <h2>{{ meal.1 }}</h2> 
+            {% for m in item_list %}
+                {% if m.meal_type == meal.0 %}
+                    <h3>{{ m.meal }}</h3>
+                    <p>{{ m.description}}</p>
+                {% endif %}
+            {% endfor %}
     {% endfor %}
 </body>
 </html>
