--- a/restaurant_menu/templates/index.html
+++ b/restaurant_menu/templates/index.html
@@ -11,8 +11,13 @@
         <h2>{{ meal.1 }}</h2> 
             {% for m in item_list %}
                 {% if m.meal_type == meal.0 %}
-                    <h3>{{ m.meal }}</h3>
-                    <p>{{ m.description}}</p>
+                    {% if m.status == 0 %}
+                        <h3><del>{{ m.meal }}</del></h3>
+                        <p>{{ m.description}}</p>
+                    {% else %}
+                            <h3>{{ m.meal }}</h3>
+                            <p>{{ m.description}}</p>
+                    {% endif %} 
                 {% endif %}
             {% endfor %}
     {% endfor %}
