Added the description and price in the item link

--- a/restaurant_menu/templates/index.html
+++ b/restaurant_menu/templates/index.html
@@ -12,10 +12,10 @@
             {% for m in item_list %}
                 {% if m.meal_type == meal.0 %}
                     {% if m.status == 0 %}
-                        <h3><del>{{ m.meal }}</del></h3>
+                        <a href="{% url 'menu_item' m.pk %}"><h3><del>{{ m.meal }}</del></h3></a>
                         <p>{{ m.description}}</p>
                     {% else %}
-                            <h3>{{ m.meal }}</h3>
+                            <a href=""><h3>{{ m.meal }}</h3></a>
                             <p>{{ m.description}}</p>
                     {% endif %} 
                 {% endif %}
