--- a/restaurant_menu/templates/index.html
+++ b/restaurant_menu/templates/index.html
@@ -1,25 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant Menu</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
+
+  <div class="container">
     <h1>Restaurant Menu</h1> 
-    {% for meal in meals %}
-        <h2>{{ meal.1 }}</h2> 
-            {% for m in item_list %}
-                {% if m.meal_type == meal.0 %}
-                    {% if m.status == 0 %}
-                        <a href="{% url 'menu_item' m.pk %}"><h3><del>{{ m.meal }}</del></h3></a>
-                        <p>{{ m.description}}</p>
-                    {% else %}
-                            <a href=""><h3>{{ m.meal }}</h3></a>
-                            <p>{{ m.description}}</p>
-                    {% endif %} 
-                {% endif %}
+    <ul class="list-group list-group-flush">
+            {% for meal in meals %}
+                <h2 class="pt-5">{{ meal.1 }}</h2> 
+                    {% for m in item_list %}
+                        {% if m.meal_type == meal.0 %}
+                            {% if m.status == 0 %}
+                             <li class="list-group-item d-flex justify-content-between align-items-center border-0 pb-0">
+                                <a href="{% url 'menu_item' m.pk %}"><h3><del>{{ m.meal }}</del></h3></a>
+                                <span class="badge bg-primary rounded-pill">{{ m.price }}</span>
+                            </li>
+                            <li class="list-group-item pt-0">
+                                <p>{{ m.description}}</p>
+                            </li>
+                            {% else %}
+                            <li class="list-group-item d-flex justify-content-between align-items-center border-0 pb-0">
+                                    <a href=""><h3>{{ m.meal }}</h3></a>
+                                    <span class="badge bg-primary rounded-pill">{{ m.price }}</span>
+                            </li>
+                            <li class="list-group-item pt-0">
+                                    <p>{{ m.description}}</p>
+                            </li>
+                            {% endif %} 
+                        {% endif %}
+                    {% endfor %}
             {% endfor %}
-    {% endfor %}
-</body>
-</html>
+    </ul>
+  </div>
+{% endblock content %}
