--- a/restaurant_menu/templates/menu_item_detail.html
+++ b/restaurant_menu/templates/menu_item_detail.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
+
+<div class="container">
     <h1>{{ item.meal }}</h1> 
     <p>{{ item.description }}</p>
     <p>{{ item.price }}</p>
-</body>
-</html>
+</div>
+
+{% endblock content %}
